# mora

./: .clang-tidy  .gitignore  .gitmodules  Cargo.toml  README.md  clippy.toml  qodana.yaml  rust-toolchain.toml  xmake.lua
.cargo/: config.toml
.github/workflows/: ci.yml  clang-tidy.yml  docs.yml  qodana_code_quality.yml
crates/mora-cli/: Cargo.toml
crates/mora-cli/src/: cli.rs  compile.rs  logging.rs  main.rs
crates/mora-cli/tests/: compile_end_to_end.rs  fixtures.rs
crates/mora-core/: Cargo.toml
crates/mora-core/src/: distributor.rs  form_id.rs  lib.rs  patch.rs  patch_sink.rs
crates/mora-core/src/chance/: fnv.rs  mod.rs  msvc_uniform.rs  splitmix.rs  szudzik.rs  xoshiro.rs
crates/mora-core/tests/: patch_roundtrip.rs
crates/mora-esp/: Cargo.toml
crates/mora-esp/src/: compression.rs  group.rs  lib.rs  load_order.rs  load_order_hash.rs  plugin.rs  plugins_txt.rs  reader.rs  record.rs  signature.rs  subrecord.rs  tes4.rs  world.rs
crates/mora-esp/src/records/: armor.rs  keyword.rs  mod.rs  weapon.rs
crates/mora-esp/src/subrecords/: armor_data.rs  armor_dnam.rs  biped_object.rs  edid.rs  form_id_ref.rs  kwda.rs  mod.rs  weapon_data.rs  weapon_dnam.rs
crates/mora-esp/tests/: esp_format.rs  fixtures.rs
crates/mora-golden-harness/: Cargo.toml
crates/mora-golden-harness/src/: lib.rs
crates/mora-kid/: Cargo.toml  build.rs
crates/mora-kid/src/: distributor.rs  filter.rs  ini.rs  lib.rs  pipeline.rs  reference.rs  rule.rs  traits_armor.rs  traits_weapon.rs
crates/mora-kid/tests/: distribute.rs  filter_activation.rs  golden.rs  parse.rs  reference.rs  trait_predicates.rs
crates/mora-runtime/: Cargo.toml
crates/mora-runtime/src/: lib.rs
crates/mora-test-harness/: Cargo.toml
crates/mora-test-harness/src/: lib.rs
crates/skse-rs/: Cargo.toml  README.md
crates/skse-rs-smoke/: Cargo.toml
crates/skse-rs-smoke/src/: lib.rs
crates/skse-rs/src/: address_library.rs  ffi.rs  lib.rs  log.rs  messaging.rs  plugin.rs  relocation.rs  version.rs
crates/skse-rs/src/game/: data_handler.rs  form.rs  hash_map.rs  keyword.rs  keyword_form.rs  lock.rs  memory.rs  mod.rs
crates/skse-rs/tests/: address_library.rs  layout.rs  macro_expansion.rs  relocation.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: lib.rs  main.rs
crates/xtask/src/capture_kid_goldens/: manifest.rs  mod.rs  staging.rs
crates/xtask/tests/: capture_kid_goldens.rs
data/: mora_rt.bc
data/relations/: README.md  event.yaml  form.yaml  player.yaml  ref.yaml  world.yaml
data/stdlib/: kid.mora
docs/: .gitignore  error-codes.md  mkdocs.yml
docs/mora_lexer/: __init__.py  setup.py
docs/plans/: 2026-04-12-chunked-columnar-factdb.md  2026-04-12-fact-based-ini-distribution.md
docs/specs/: 2026-04-12-chunked-columnar-factdb.md  2026-04-12-data-driven-patch-table.md  2026-04-12-fact-based-ini-distribution.md  2026-04-12-pipeline-operators.md  2026-04-18-kid-v2-deferred-features.md
docs/src/: architecture.md  cli-reference.md  cross-compile-windows.md  editor-support.md  examples.md  getting-started.md  how-mora-works.md  importing.md  index.md  integration-testing.md  kid-grammar.md  kid-ini-grammar.md  kid-integration.md  language-guide.md  language-reference.md  mora-cli-reference.md  mora-core-reference.md  mora-esp-reference.md  relations.md  runner-image-refresh.md  skse-rs-ffi-reference.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
extensions/parquet/: xmake.lua
extensions/skyrim_compile/: xmake.lua
extensions/skyrim_runtime/: xmake.lua
extensions/synthetic/: xmake.lua
scripts/: build_commonlib.sh  build_rt_bitcode.sh  build_rt_lib.sh  build_runtime.sh  build_runtime_dll.sh  build_test_harness.sh  deploy_runtime.sh  git-restore-mtime.py  test_runtime.sh
scripts/xmake-repo/: xmake.lua
src/: main.cpp
src/ast/: ast.cpp  types.cpp
src/cli/: doc_generator.cpp  output.cpp  progress.cpp  terminal.cpp
src/codegen/: address_library.cpp  dll_builder.cpp  ir_emitter.cpp
src/core/: arena.cpp  digest.cpp  sha256.cpp  sha256.h  source_location.cpp  string_pool.cpp  type.cpp
src/dag/: bytecode.cpp  compile.cpp  graph.cpp
src/data/: action_names.cpp  chunk_pool.cpp  column.cpp  columnar_relation.cpp  indexed_relation.cpp  plugin_facts.cpp  schema_registry.cpp  value.cpp  vector.cpp
src/diag/: diagnostic.cpp  renderer.cpp
src/emit/: arrangement_emit.cpp  flat_file_writer.cpp  lock_file.cpp  patch_reader.cpp  patch_table.cpp  patch_writer.cpp  placeholder.cpp  rt_writer.cpp
src/esp/: esp_reader.cpp  load_order.cpp  mmap_file.cpp  override_filter.cpp  placeholder.cpp  plugin_index.cpp  record_types.cpp  subrecord_reader.cpp
src/eval/: binding_chunk.cpp  effect_facts.cpp  evaluator.cpp  expr_eval.cpp  fact_db.cpp  op_antijoin.cpp  op_append.cpp  op_filter.cpp  op_in_clause.cpp  op_join.cpp  op_scan.cpp  op_union.cpp  (+5 more)
test_data/: RealisticCombat_DISTR.ini  TestArmor_KID.ini  TestMod_DISTR.ini  WeaponKeywords_KID.ini  bandit_bounty.mora  dynamic.mora  errors.mora  example.mora  iron_damage.mora  nazeem.mora  one_nazeem.mora
tests/: address_library_test.cpp  arena_test.cpp  armor_dumper_test.cpp  backend_integration_test.cpp  chunk_pool_test.cpp  columnar_relation_test.cpp  crc32_test.cpp  diagnostic_test.cpp  dll_builder_test.cpp  esp_reader_test.cpp  evaluator_test.cpp  fact_db_test.cpp  indexed_relation_test.cpp  ini_distribution_rules_test.cpp  ini_facts_test.cpp  ini_reader_test.cpp  integration_test.cpp  ir_emitter_test.cpp  kid_parser_test.cpp  leveled_list_dumper_test.cpp  lexer_test.cpp  load_order_test.cpp  mmap_file_test.cpp  mora_printer_test.cpp  name_resolver_test.cpp  npc_dumper_test.cpp  operators_test.cpp  override_filter_test.cpp  parser_test.cpp  patch_buffer_test.cpp  patch_roundtrip_test.cpp  patch_set_test.cpp  patch_table_test.cpp  phase_classifier_test.cpp  pipeline_evaluator_test.cpp  pipeline_test.cpp  plugin_facts_test.cpp  plugin_index_test.cpp  record_types_test.cpp  rt_writer_test.cpp  (+10 more)
tools/: gen_docs.py  gen_relations.py  test_harness.py
(+518 files in other folders)
