[package]
name = "mora-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SKSE test-harness DLL exposing TCP commands for integration tests."
publish = false

[lib]
name = "MoraTestHarness"
crate-type = ["cdylib"]

[dependencies]
mora-core = { path = "../mora-core" }
skse-rs = { path = "../skse-rs" }
serde.workspace = true
serde_json = "1"
tracing.workspace = true
