[package]
name = "skse-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Clean-room Rust SKSE plugin framework for Skyrim SE/AE. Not a binding to CommonLibSSE-NG."
readme = "README.md"
keywords = ["skyrim", "skse", "modding"]
categories = ["external-ffi-bindings", "game-development"]

[lib]
# rlib by default; downstream crates that need a cdylib for Skyrim build their own.

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
widestring = "1"
