[lib]
path = "src/lib.rs"

[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dev-workflow orchestration for Mora. Run via `cargo xtask <cmd>`."
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
